--- a/src/.env
+++ b/src/.env
@@ -4,3 +4,7 @@ REACT_APP_FIREBASE_PROJECT_ID=officeapp-6dcf7
 REACT_APP_FIREBASE_STORAGE_BUCKET=officeapp-6dcf7.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=432297652147
 REACT_APP_FIREBASE_APP_ID=1:432297652147:web:3c4f44fc49c75c45ada5c6
+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
+
+
+
